# rules_cc

./: .bazelrc  .gitignore  BUILD  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  extensions.bzl  internal_deps.bzl  internal_setup.bzl  local_bazel.bzl  renovate.json
.bazelci/: presubmit.yml
.bcr/: metadata.template.json  presubmit.yml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: standard-issue-template.md
.github/workflows/: publish.yaml  release.yaml  release.yml  release_prep.sh
bzlmod/: extensions.bzl
cc/: BUILD  BUILD.empty  BUILD.static.freebsd  BUILD.toolchains.tpl  BUILD.windows.tpl  action_names.bzl  api.bzl  build_settings.bzl  cc_binary.bzl  cc_configure.bzl  cc_flags_supplier.bzl  cc_import.bzl  cc_library.bzl  cc_postmark_initializers.bzl  cc_shared_library.bzl  cc_static_library.bzl  cc_test.bzl  cc_toolchain_config.bzl  cc_toolchain_config_lib.bzl  compiler_flag.bzl  defs.bzl  deps.bzl  extensions.bzl  find_cc_toolchain.bzl  objc_import.bzl  objc_library.bzl  osx_cc_configure.bzl  repositories.bzl  rules.bzl  system_library.bzl  toolchain_utils.bzl  unix_cc_configure.bzl  unix_cc_toolchain_config.bzl  use_cc_toolchain.bzl  windows_cc_configure.bzl  windows_cc_toolchain_config.bzl
cc/common/: BUILD  cc_debug_helper.bzl  cc_helper.bzl  cc_helper_internal.bzl  cc_info.bzl  cc_shared_library_hint_info.bzl  objc_info.bzl  semantics.bzl  visibility.bzl
cc/compiler/: BUILD  compilers.bzl
cc/cxx_standard/: BUILD  cxx_standard.bzl
cc/libc/: BUILD
cc/private/: BUILD  cc_common.bzl  cc_info.bzl  cc_launcher_info.bzl  cc_shared_library_hint_info.bzl  debug_package_info.bzl  graph_node_info.bzl  paths.bzl
cc/private/coverage/: BUILD.bazel  collect_cc_coverage.sh
cc/proto/: BUILD
cc/runfiles/: BUILD  runfiles.cc  runfiles.h
cc/settings/: BUILD  BUILD.bazel
cc/toolchains/: BUILD  README.md  action_type_config.bzl  actions.bzl  args.bzl  args_list.bzl  artifacts.bzl  cc_coverage_config.bzl  cc_flags_supplier.bzl  cc_test_toolchain.bzl  cc_toolchain.bzl  cc_toolchain_alias.bzl  cc_toolchain_info.bzl  cc_toolchain_suite.bzl  compiler_flag.bzl  fdo_prefetch_hints.bzl  fdo_profile.bzl  feature.bzl  feature_constraint.bzl  feature_legacy.bzl  feature_set.bzl  format.bzl  legacy_file_group.bzl  legacy_tool.bzl  libc_flag.bzl  make_variables.bzl  memprof_profile.bzl  mutually_exclusive_category.bzl  nested_args.bzl  propeller_optimize.bzl  providers.bzl  target_capability.bzl  tool.bzl  tool_capability.bzl  tool_map.bzl  toolchain.bzl  toolchain_api.md  toolchain_config_utils.bzl
distro/: BUILD
docs/: BUILD  features.md  toolchain_api.md  update.sh
examples/: BUILD  experimental_cc_shared_library.bzl
examples/c_compile_rule/: BUILD  c_compile_rule.bzl
examples/custom_toolchain/: BUILD  README.md  sample_compiler  sample_linker  toolchain_config.bzl
examples/inject_extra_features/: BUILD  main.cpp
examples/my_c_archive/: BUILD  my_c_archive.bzl
examples/my_c_compile/: BUILD  my_c_compile.bzl
examples/my_c_rule/: BUILD  bar.c  baz.c  baz.h  build_defs.bzl  main.c
examples/rule_based_toolchain/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  quick_test.cc
examples/rule_based_toolchain/asm_answer/: BUILD.bazel  asm_answer_win.asm
examples/rule_based_toolchain/constraint/: BUILD.bazel
examples/rule_based_toolchain/dynamic_answer/: BUILD  BUILD.bazel  dynamic_answer.c  dynamic_answer.def
examples/rule_based_toolchain/dynamic_answer/public/: dynamic_answer.h
examples/rule_based_toolchain/static_answer/: BUILD  BUILD.bazel  static_answer.cc
examples/rule_based_toolchain/static_answer/public/: static_answer.h
examples/rule_based_toolchain/toolchain/: BUILD  BUILD.bazel  clang.BUILD  linux_sysroot.BUILD
examples/rule_based_toolchain/toolchain/args/: BUILD.bazel
examples/rule_based_toolchain/toolchain/tools/: BUILD.bazel
examples/rule_based_toolchain/toolchains/: BUILD.bazel
examples/rule_based_toolchain/toolchains/args/: BUILD.bazel
examples/rule_based_toolchain/toolchains/clang/: BUILD.bazel  clang.BUILD
examples/rule_based_toolchain/toolchains/clang/tools/: BUILD.bazel
examples/rule_based_toolchain/toolchains/clang_cl/: BUILD.bazel  clang.BUILD
examples/rule_based_toolchain/toolchains/clang_cl/tools/: BUILD.bazel
examples/rule_based_toolchain/toolchains/gcc/: BUILD.bazel  gcc.BUILD
examples/rule_based_toolchain/toolchains/gcc/args/: BUILD.bazel
examples/rule_based_toolchain/toolchains/gcc/patchs/: libc.so.patch  libm.so.patch
examples/rule_based_toolchain/toolchains/gcc/tools/: BUILD.bazel
examples/rule_based_toolchain/toolchains/gcc/tools/wrapper/: ld.sh
examples/rule_based_toolchain/toolchains/msvc/: BUILD.bazel
examples/rule_based_toolchain/toolchains/msvc/tools/: BUILD.bazel
examples/rule_based_toolchain/toolchains/windows/: BUILD.bazel  msvc_repo.bzl
examples/shared_library_mvp/: BUILD  a.cc  a.h  b.cc  b.h  bazel-genfiles  bazel-out  bazel-shared_library_mvp  bazel-testlogs  c.cc  c.h  cc_shared_library.bzl  d.cc  d.h  e.cc  e.h  f.cc  f.h  main.cc  symbol_grabber.sh
examples/test_cc_shared_library/: BUILD  BUILD.oss  bar2.cc  bar3.cc  bar4.cc  bar4.h  baz.cc  cc_shared_library_integration_test.sh  qux.cc  starlark_tests.bzl
examples/test_cc_shared_library/diamond_inheritance/: BUILD  BUILD.bazel  main.cc
examples/test_cc_shared_library2/: BUILD
examples/windows_resources/: BUILD  version.rc
examples/write_cc_toolchain_cpu/: BUILD  write_cc_toolchain_cpu.bzl
tests/: BUILD  test_utils.sh
tests/alwayslink_srcs/: BUILD  alwayslink_test.c  registered.c  registered.h  registerer.c
tests/cc_shared_library_exports_filter/: BUILD  exported_transitive.cc  exported_transitive.h  exported_transitive_middle.cc  exported_transitive_middle.h  exports_filter_transitive_test.cc  uses_exported_transitive.cc  uses_exported_transitive.h
tests/default_unix_toolchain/: BUILD.bazel  archive.cc  unix_archiver_test.bzl
tests/strip_include_prefix/: BUILD.bazel  not_nested.h  test_include_textual.cc
tests/strip_include_prefix/nested/: lib.cc  lib.h
(+391 files in other folders)
