module(
    name = "rules_cc",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_features", version = "1.43.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "protobuf", version = "27.0", repo_name = "com_google_protobuf")

bazel_dep(name = "apple_support", version = "2.3.0", dev_dependency = True)

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
    dev_dependency = True,
)
use_repo(apple_cc_configure, "local_config_apple_cc_toolchains")

register_toolchains(
    "@local_config_apple_cc_toolchains//:all",
    dev_dependency = True,
)

cc_configure = use_extension("//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc", "local_config_cc_toolchains")

register_toolchains(
    "@local_config_cc_toolchains//:all",
    "//cc/private/toolchain/test:default_test_runner_toolchain",
)

bazel_dep(name = "rules_shell", version = "0.2.0", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)
single_version_override(
    module_name = "googletest",
    patch_strip = 1,
    patches = ["//:googletest.patch"],
    version = "1.17.0",
)

# Required commit 288cdbd "Add meta field to ActionSubject."
# TODO: pzembrod - Change to a released version again when the commit is in a release.
bazel_dep(name = "rules_testing", dev_dependency = True)
archive_override(
    module_name = "rules_testing",
    integrity = "sha256-7Uj90x7fnhUKBxRytq/R4E9gOBisIoDW1KoUxHCDVd4=",
    strip_prefix = "rules_testing-288cdbd3ef4839a89d9d5911319fd9edde44b106",
    urls = ["https://github.com/bazelbuild/rules_testing/archive/288cdbd3ef4839a89d9d5911319fd9edde44b106.tar.gz"],
)

bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True)

# Compatibility layer
compat = use_extension("//cc:extensions.bzl", "compatibility_proxy")
use_repo(compat, "cc_compatibility_proxy")
