# Copyright 2024 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")

licenses(["notice"])

cc_library(
    name = "headers",
    hdrs = ["public/dynamic_answer.h"],
    includes = ["public"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "answer",
    srcs = ["dynamic_answer.c"],
    visibility = ["//visibility:private"],
    deps = [":headers"],
)

cc_shared_library(
    name = "shared_library",
    visibility = ["//visibility:private"],
    win_def_file = "dynamic_answer.def",
    deps = [":answer"],
)

filegroup(
    name = "shared_library_interface",
    srcs = [":shared_library"],
    output_group = "interface_library",
    visibility = ["//visibility:private"],
)

cc_import(
    name = "dynamic_answer_import",
    interface_library = ":shared_library_interface",
    shared_library = ":shared_library",
    visibility = ["//visibility:private"],
)

# Forces linkage as a shared library.
cc_library(
    name = "dynamic_answer",
    srcs = select({
        "//constraint:windows_x86_64": [],
        "//constraint:windows_aarch64": [],
        "//conditions:default": [":shared_library"],
    }),
    visibility = ["//visibility:public"],
    deps = [":headers"] + select({
        "//constraint:windows_x86_64": [":dynamic_answer_import"],
        "//constraint:windows_aarch64": [":dynamic_answer_import"],
        "//conditions:default": [],
    }),
)
