load("//cc:defs.bzl", "cc_binary")

cc_shared_library(
    name = "baz_so",
    permissions = [
        "//examples/test_cc_shared_library:permissions",
    ],
    roots = ["//examples/test_cc_shared_library:a_suffix"],
)

cc_shared_library(
    name = "qux_so",
    dynamic_deps = [":baz_so"],
    permissions = [
        "//examples/test_cc_shared_library:permissions",
    ],
    roots = ["//examples/test_cc_shared_library:qux"],
)

cc_shared_library(
    name = "qux2_so",
    dynamic_deps = [":baz_so"],
    permissions = [
        "//examples/test_cc_shared_library:permissions",
    ],
    roots = ["//examples/test_cc_shared_library:qux2"],
)

cc_binary(
    name = "diamond_inheritance",
    srcs = ["main.cc"],
    dynamic_deps = [
        ":qux_so",
        ":qux2_so",
    ],
    deps = [
        "//examples/test_cc_shared_library:a_suffix",
    ],
)
