# Copyright 2025 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc/toolchains:artifacts.bzl", "cc_artifact_name_pattern")

package(default_visibility = ["//visibility:public"])

cc_artifact_name_pattern(
    name = "object_file",
    category = "@rules_cc//cc/toolchains/artifacts:object_file",
    extension = ".obj",
    prefix = "",
)

cc_artifact_name_pattern(
    name = "static_library",
    category = "@rules_cc//cc/toolchains/artifacts:static_library",
    extension = ".lib",
    prefix = "",
)

cc_artifact_name_pattern(
    name = "alwayslink_static_library",
    category = "@rules_cc//cc/toolchains/artifacts:alwayslink_static_library",
    extension = ".lo.lib",
    prefix = "",
)

cc_artifact_name_pattern(
    name = "executable",
    category = "@rules_cc//cc/toolchains/artifacts:executable",
    extension = ".exe",
    prefix = "",
)

cc_artifact_name_pattern(
    name = "dynamic_library",
    category = "@rules_cc//cc/toolchains/artifacts:dynamic_library",
    extension = ".dll",
    prefix = "",
)

cc_artifact_name_pattern(
    name = "interface_library",
    category = "@rules_cc//cc/toolchains/artifacts:interface_library",
    extension = ".lib",
    prefix = "",
)
