# Copyright 2026 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc/toolchains:tool.bzl", "cc_tool")
load("@rules_cc//cc/toolchains:tool_map.bzl", "cc_tool_map")

licenses(["notice"])

COMMON_TOOLS = {
    "@rules_cc//cc/toolchains/actions:assembly_actions": ":clang-cl",
    "@rules_cc//cc/toolchains/actions:c_compile": ":clang-cl",
    "@rules_cc//cc/toolchains/actions:cpp_compile_actions": ":clang-cl",
    "@rules_cc//cc/toolchains/actions:link_actions": ":lld-link",
    "@rules_cc//cc/toolchains/actions:objcopy_embed_data": ":llvm-objcopy",
    "@rules_cc//cc/toolchains/actions:strip": ":llvm-strip",
}

cc_tool_map(
    name = "all_tools",
    tools = COMMON_TOOLS | {
        "@rules_cc//cc/toolchains/actions:ar_actions": ":llvm-lib",
    },
    visibility = ["//visibility:public"],
)

cc_tool(
    name = "clang-cl",
    src = select({
        "//constraint:windows_x86_64": "@clang-windows-x86_64//:bin/clang-cl.exe",
        "//constraint:windows_aarch64": "@clang-windows-aarch64//:bin/clang-cl.exe",
    }),
    capabilities = [
        "@rules_cc//cc/toolchains/capabilities:targets_windows",
    ],
    data = [
        ":exec_platform_builtin_headers",
        ":exec_platform_multicall_support_files",
    ],
    tags = ["manual"],
)

cc_tool(
    name = "lld-link",
    src = select({
        "//constraint:windows_x86_64": "@clang-windows-x86_64//:bin/lld-link.exe",
        "//constraint:windows_aarch64": "@clang-windows-aarch64//:bin/lld-link.exe",
    }),
    capabilities = [
        "@rules_cc//cc/toolchains/capabilities:targets_windows",
        "@rules_cc//cc/toolchains/capabilities:supports_interface_shared_libraries",
        "@rules_cc//cc/toolchains/capabilities:has_configured_linker_path",
        "@rules_cc//cc/toolchains/capabilities:copy_dynamic_libraries_to_binary",
    ],
    data = [
        ":exec_platform_linker_builtins",
        ":exec_platform_multicall_support_files",
    ],
    tags = ["manual"],
)

cc_tool(
    name = "llvm-lib",
    src = select({
        "//constraint:windows_x86_64": "@clang-windows-x86_64//:bin/llvm-lib.exe",
        "//constraint:windows_aarch64": "@clang-windows-aarch64//:bin/llvm-lib.exe",
    }),
    capabilities = [
        "@rules_cc//cc/toolchains/capabilities:targets_windows",
    ],
    data = [":exec_platform_multicall_support_files"],
    tags = ["manual"],
)

cc_tool(
    name = "llvm-objcopy",
    src = select({
        "//constraint:windows_x86_64": "@clang-windows-x86_64//:bin/llvm-objcopy.exe",
        "//constraint:windows_aarch64": "@clang-windows-aarch64//:bin/llvm-objcopy.exe",
    }),
    data = [":exec_platform_multicall_support_files"],
    tags = ["manual"],
)

cc_tool(
    name = "llvm-strip",
    src = select({
        "//constraint:windows_x86_64": "@clang-windows-x86_64//:bin/llvm-strip.exe",
        "//constraint:windows_aarch64": "@clang-windows-aarch64//:bin/llvm-strip.exe",
    }),
    data = [":exec_platform_multicall_support_files"],
    tags = ["manual"],
)

alias(
    name = "exec_platform_builtin_headers",
    actual = select({
        "//constraint:windows_x86_64": "@clang-windows-x86_64//:builtin_headers",
        "//constraint:windows_aarch64": "@clang-windows-aarch64//:builtin_headers",
    }),
    tags = ["manual"],
    visibility = ["//visibility:private"],
)

alias(
    name = "exec_platform_multicall_support_files",
    actual = select({
        "//constraint:windows_x86_64": "@clang-windows-x86_64//:multicall_support_files",
        "//constraint:windows_aarch64": "@clang-windows-aarch64//:multicall_support_files",
    }),
    tags = ["manual"],
    visibility = ["//visibility:private"],
)

alias(
    name = "exec_platform_linker_builtins",
    actual = select({
        "//constraint:windows_x86_64": "@clang-windows-x86_64//:linker_builtins",
        "//constraint:windows_aarch64": "@clang-windows-aarch64//:linker_builtins",
    }),
    tags = ["manual"],
    visibility = ["//visibility:private"],
)
